
[project]
name = "rfc-tidy"
version = "0.1.2"
authors = [
  { name="Martin Thomson", email="mt@lowentropy.net" },
]
description = "Cleanup RFC XML"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
keywords = ["rfc", "ietf", "xml"]

[project.urls]
"Homepage" = "https://github.com/martinthomson/rfc-tidy"
"Bug Tracker" = "https://github.com/martinthomson/rfc-tidy/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
